# maracatu-llm

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  experiment_report.md  feature_request.md
configs/: maracatu_20m.yaml  maracatu_80m.yaml  maracatu_80m_lab.yaml  maracatu_tiny.yaml  maracatu_tiny_long.yaml
data/: README.md
docs/: kaggle.md  publishing.md  runpod.md
docs/experiments/: 2026-04-18-tiny-v1-gpt2.md  2026-04-18-tiny-v2-llama.md  2026-04-19-tiny-long.md  2026-04-20-maracatu-20m-benchmarks.md  2026-04-20-maracatu-20m-kaggle.md  2026-04-23-maracatu-80m-lab.md  README.md  _TEMPLATE.md
docs/launch-posts/: kaggle-example-notebook.ipynb  kaggle-model-card.md  ollama-readme.md
docs/research/: 2026-04-22-survey-efficiency-papers.md
notebooks/: explore.ipynb
scripts/: build_corpus_v2.py  clean_corpus.py  export_gguf.sh  export_hf.py  kaggle_run.py  publish_all.sh  runpod_bootstrap.sh  runpod_train.sh
scripts/eval/: run_benchmarks.sh
scripts/eval/tasks/enem_challenge/: enem_challenge.yaml  enem_utils.py
src/maracatu/: __init__.py  data.py  model.py  sample.py  train.py
tokenizer/: train_tokenizer.py
