[project]
name = "maracatu"
version = "0.1.0"
description = "Um modelo de linguagem brasileiro treinado do zero, em português"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Anderson Anzileiro", email = "contact@maracatu.org" }
]
keywords = ["llm", "nlp", "portuguese", "brazilian", "transformer", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Portuguese (Brazilian)",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "sentencepiece>=0.2.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "datasets>=2.18.0",
    "requests>=2.31.0",
    "transformers>=4.45",
    "safetensors>=0.4.0",
    "datasketch>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ipython>=8.22.0",
    "jupyter>=1.0.0",
    "kaggle>=1.5,<1.6",
]
wandb = [
    "wandb>=0.16.0",
]

[project.urls]
Homepage = "https://maracatu.org"
Repository = "https://github.com/maracatu-labs/maracatu"
Issues = "https://github.com/maracatu-labs/maracatu/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
